textalign fix for similar items

--- a/source/sass/blocks/_similar-items.sass
+++ b/source/sass/blocks/_similar-items.sass
@@ -41,6 +41,7 @@
   &__link
     margin-top: auto
     text-decoration: none
+    text-align: center
     &:after
       content: ""
       position: absolute
